--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,20 @@
-version: 2
-jobs:
-  build:
-    context: DockerHub
+version: 2.1
+executors:
+  circleci-executor:
     docker:
-      - image: tplcom/gitpod-drupal-workspace:latest
+      - image: cimg/base:stable  
+jobs:
+  deploy-docker-image:
+    executor: circleci-executor
     steps:
       - checkout
-      - setup_remote_docker
-      - run:
-          name: Build Docker image
-          command: |
-            docker build . -t tplcom/gitpod-drupal-workspace
-      - deploy:
-          name: Push Docker image
-          command: |
-            if [ "${CIRCLE_BRANCH}" == "master" ]; then
-              docker login -u $docker_hub_user -p $docker_hub_pwd
-              docker push tplcom/gitpod-drupal-workspace:latest
-            fi
+      - run: |
+          IMAGE='tplcom/gitpod-drupal-workspace'
+          TAG='latest
+          docker build -t $IMAGE:$TAG .
+          echo $docker_hub_pwd | docker login -u $docker_hub_user --password-stdin
+          docker push $IMAGE:$TAG
+workflows:
+  docker-hub-workflow:
+    jobs:
+      - deploy-docker-image
