--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,7 @@ jobs:
       - image: circleci/buildpack-deps:focal
     steps:
       - checkout
-      - setup_remote_docker:
-          docker_layer_caching: true
+      - setup_remote_docker
       - run: |
           IMAGE='tplcom/gitpod-drupal-workspace'
           TAG='latest'
